--- a/Day3.ipynb
+++ b/Day3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOaSLnQO8rsJx6KiUUwN/u4",
+      "authorship_tag": "ABX9TyM8JqO/oOiXEfxfeLauD5BI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
       "metadata": {
-        "id": "5GVotnzqd9g9"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 106
+        },
+        "id": "dd6e750b",
+        "outputId": "2fceb057-686b-417a-c871-22c3a7c4f440"
       },
-      "outputs": [],
       "source": [
+        "!pip install streamlit openai\n",
+        "\n",
         "import streamlit as st\n",
         "import openai\n",
         "from datetime import datetime\n",
@@ -298,6 +303,17 @@
         "# Footer\n",
         "st.divider()\n",
         "st.caption(\"Day 3: Advanced Context Management - Understanding how AI systems handle memory constraints\")"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "did you forget parentheses around the comprehension target? (ipython-input-18-956982996.py, line 242)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipython-input-18-956982996.py\"\u001b[0;36m, line \u001b[0;32m242\u001b[0m\n\u001b[0;31m    {\"role\": \"user\", \"content\": f\"Test message {i}\"},\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m did you forget parentheses around the comprehension target?\n"
+          ]
+        }
       ]
     }
   ]
