--- a/Day3.ipynb
+++ b/Day3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMOnnCEyzb7QG4jG6uJ0Xmn",
+      "authorship_tag": "ABX9TyNguud+4UUG5uNynIz7vyFI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,10 +30,11 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 595
         },
         "id": "dd6e750b",
-        "outputId": "796b0318-5690-4e6d-db6e-e04aae89f936"
+        "outputId": "e03257a8-1590-4394-9e81-300b678d9b7c"
       },
       "source": [
         "import tiktoken\n",
@@ -375,7 +376,7 @@
         "    for strategy in strategies:\n",
         "        print(f\"\\n=== Testing {strategy.value} ===\")\n",
         "\n",
-        "        manager = AdvancedContextManager(max_tokens=500, strategy=strategy)\n",
+        "        manager = AdvancedContextManager(max_tokens=50, strategy=strategy)\n",
         "        memory = ConversationMemory(context_strategy=strategy)\n",
         "\n",
         "        # Simulate conversation\n",
@@ -396,7 +397,7 @@
         "        print(f\"Final stats: {stats}\")\n",
         "        print(f\"Messages retained: {len(memory.messages)}\")"
       ],
-      "execution_count": 19,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -404,20 +405,30 @@
           "text": [
             "\n",
             "=== Testing sliding_window ===\n",
-            "Final stats: {'total_messages': 7, 'total_tokens': 65, 'token_utilization': 0.13, 'message_types': {'system': 1, 'user': 3, 'assistant': 3}, 'avg_importance': 6.795714285714287, 'strategy': 'sliding_window', 'summaries_created': 0, 'session_duration': 3.3e-05}\n",
-            "Messages retained: 7\n",
+            "Final stats: {'total_messages': 4, 'total_tokens': 45, 'token_utilization': 0.9, 'message_types': {'system': 1, 'assistant': 2, 'user': 1}, 'avg_importance': 8.18, 'strategy': 'sliding_window', 'summaries_created': 0, 'session_duration': 9.15e-06}\n",
+            "Messages retained: 4\n",
             "\n",
             "=== Testing summarization ===\n",
-            "Final stats: {'total_messages': 7, 'total_tokens': 65, 'token_utilization': 0.13, 'message_types': {'system': 1, 'user': 3, 'assistant': 3}, 'avg_importance': 6.795714285714287, 'strategy': 'summarization', 'summaries_created': 0, 'session_duration': 1.2833333333333333e-05}\n",
-            "Messages retained: 7\n",
+            "Final stats: {'total_messages': 4, 'total_tokens': 45, 'token_utilization': 0.9, 'message_types': {'system': 1, 'assistant': 2, 'user': 1}, 'avg_importance': 8.18, 'strategy': 'summarization', 'summaries_created': 0, 'session_duration': 3.066666666666667e-06}\n",
+            "Messages retained: 4\n",
             "\n",
             "=== Testing semantic_compression ===\n",
-            "Final stats: {'total_messages': 7, 'total_tokens': 65, 'token_utilization': 0.13, 'message_types': {'system': 1, 'user': 3, 'assistant': 3}, 'avg_importance': 6.795714285714287, 'strategy': 'semantic_compression', 'summaries_created': 0, 'session_duration': 6.316666666666667e-06}\n",
-            "Messages retained: 7\n",
+            "Final stats: {'total_messages': 5, 'total_tokens': 44, 'token_utilization': 0.88, 'message_types': {'system': 1, 'user': 3, 'assistant': 1}, 'avg_importance': 7.9, 'strategy': 'semantic_compression', 'summaries_created': 0, 'session_duration': 2.6833333333333336e-06}\n",
+            "Messages retained: 5\n",
             "\n",
-            "=== Testing hierarchical ===\n",
-            "Final stats: {'total_messages': 7, 'total_tokens': 65, 'token_utilization': 0.13, 'message_types': {'system': 1, 'user': 3, 'assistant': 3}, 'avg_importance': 6.795714285714287, 'strategy': 'hierarchical', 'summaries_created': 0, 'session_duration': 1.085e-05}\n",
-            "Messages retained: 7\n"
+            "=== Testing hierarchical ===\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "'list' object has no attribute 'last_accessed'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-21-3464205351.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    353\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    354\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mmsg\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtest_messages\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 355\u001b[0;31m             \u001b[0mmemory\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmanager\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_message\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmemory\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    356\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    357\u001b[0m         \u001b[0mstats\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmanager\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_context_stats\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmemory\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/tmp/ipython-input-21-3464205351.py\u001b[0m in \u001b[0;36madd_message\u001b[0;34m(self, memory, message)\u001b[0m\n\u001b[1;32m     81\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0madd_message\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmemory\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mConversationMemory\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmessage\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mDict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0mConversationMemory\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     82\u001b[0m         \u001b[0;34m\"\"\"Add message with metadata tracking\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 83\u001b[0;31m         \u001b[0mmemory\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlast_accessed\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     84\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     85\u001b[0m         \u001b[0;31m# Calculate metadata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'last_accessed'"
           ]
         }
       ]
